resources/assets/stylesheets/scss/responsive.scss
@use "../mixins/colors";
@import "breakpoints";
@import "buttons";
@import "sidebar";

$header-bar-container-height: 40px;

$responsive-menu-width: 1.5 * $sidebar-width;

$sidebarIn: -15px;
$sidebarOut: -330px;

#responsive-toggle-desktop,
#responsive-toggle-fullscreen,
#responsive-toggle-focusmode {
    display: none;
}

#responsive-toggle-fullscreen,
#responsive-toggle-focusmode {
    svg {
        cursor: pointer;
    }
}

#non-responsive-toggle-fullscreen {
    margin-left: auto;

    button {
        padding: 0;
    }

    svg {
        cursor: pointer;
        vertical-align: middle;
    }
}


#responsive-menu {
    font-size: $font-size-base;
    margin-top: 4px;
    z-index: 1002;

    .responsive-navigation-header {
        display: flex;
        padding: 2px 0;
        color: var(--color--brand-primary-contrast);

        .menu-closed {
            color: var(--color--brand-primary-contrast);
            cursor: pointer;
            transform: rotate(0deg);
            transition: var(--transition-duration) ease-in-out;
        }

        .menu-open {
            cursor: pointer;
            color: var(--color--brand-primary-contrast);
            transform: rotate(90deg);
            transition: var(--transition-duration) ease-in-out;
        }
    }

}

#responsive-navigation-button:not(.slide-enter-active):not(.slide-leave-active) {
    cursor: pointer;
    margin-left: -3px;
}

#responsive-navigation-items {
    background-color: var(--color--brand-primary);
    left: 0;
    max-height: calc(100vh - $header-bar-container-height - 5px);
    max-width: $responsive-menu-width;
    overflow-y: auto;
    padding-bottom: 5px;
    position: fixed;
    top: 40px;

    /* Safari only */
    @media not all and (min-resolution: .001dpcm) {
        @supports (-webkit-appearance: none) {
            top: 43px;
        }
    }

    width: $responsive-menu-width;

    transition: all var(--transition-duration) ease-in-out;

    header {
        background-image: url("#{$image-path}/header/responsive-menu-background.png");
        background-size: cover;
        display: flex;
        flex-wrap: wrap;
        max-height: 250px;
        overflow-y: auto;
        padding: 10px;

        .profile-info {
            flex: auto;
            font-size: $font-size-small;
            padding: 20px;
            position: relative;

            .profile-pic {
                width: 100%;

                img,
                svg {
                    cursor: pointer;
                    height: 50px;
                    width: 50px;
                }
            }
        }

        > div {
            display: flex;
            width: 100%;

            .avatar-navigation {
                flex: auto;
                padding-left: 10px;

                .navigation-item {
                    background-color: transparent;

                    &:hover {
                        background-color: rgba(255,255,255,0.2);
                    }
                }
            }
        }

        .open-avatarmenu,
        .close-avatarmenu {
            button {
                cursor: pointer;
                position: relative;
                top: calc(50% - 12px);
            }
        }
    }

    .main-navigation {
        margin: 0 5px;
        padding: 0 5px;
    }

    .navigation-item {
        background-color: var(--color--brand-primary);
        color: var(--color--brand-primary-contrast);
        display: flex;
        flex-wrap: wrap;
        list-style-type: none;
        margin: 0px;

        &:not(:last-child) {
            border-bottom: 1px solid var(--color--brand-primary-contrast);
        }

        &.navigation-up,
        &.navigation-current {
            .navigation-icon {
                svg {
                    padding-top: 0;
                }
            }

            .navigation-title {
                padding: 10px 10px 10px 0;
            }

            &:hover {
                background-color: rgba(255,255,255,0.2);
            }

        }

        &.navigation-item-active {
            background-color: rgba(255,255,255,0.2);
        }

        a {
            color: var(--color--brand-primary-contrast);
            cursor: pointer;
        }

        button {
            color: var(--color--brand-primary-contrast);
            cursor: pointer;
            display: flex;
            flex: 0;
            text-align: center;
            width: 100%;

            img,
            svg {
                padding-top: 12px;
            }

            &.navigation-in {
                border-left: 1px solid rgba(255,255,255,0.4);
            }
        }

        &:not(.navigation-current):not(.navigation-up) {
            button:hover {
                background-color: rgba(255,255,255,0.2);
            }
        }

    }

    .navigation-title {
        color: var(--color--brand-primary-contrast);
        flex: 1;

        > a,
        form button {
            display: inline-block;
            padding: 10px 10px 10px 5px;
            text-align: left;
            width: calc(100% - 15px);

            .navigation-icon {
                flex: 0;
                width: 35px;
            }

            .navigation-text {
                flex: 1;
                padding-top: 2px;
                vertical-align: text-bottom;
            }

        }

        img,
        svg {
            &:not(.avatar) {
                filter: contrast(0) brightness(2);
            }
            margin-right: 10px;
            vertical-align: text-bottom;
        }

    }

    a {
        flex: 0;

        &:hover {
            background-color: rgba(255,255,255,0.2);
        }

    }

    img, svg {
        vertical-align: text-bottom;
    }
}

#responsive-contentbar-container {
    position: fixed;
    width: 100vw;
    z-index: 1000;

    #toggle-sidebar {
        color: var(--color--highlight);

        .studip-icon {
            vertical-align: bottom;
        }
    }
}
/* ... */

